--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Posts"
-    url: /year-archive/
-  - title: "Projects"
-    url: /categories/
+  #- title: "Posts"
+  #  url: /year-archive/
+  #- title: "Projects"
+  #  url: /categories/
   - title: "Contact"
     url: /contact/
